--- a/contenido/cianuro_plata.html
+++ b/contenido/cianuro_plata.html
@@ -95,9 +95,9 @@
                 <li class="nav-item">
                     <a class="nav-link fs-5" href="/">Inicio</a>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link fs-5" href="contenido/sostenibilidad.html">Productos</a>
-                </li>
+                </li> -->
 
                 <li class="has-submenu" style="position: relative;">
                     <a class="nav-link fs-5 d-flex" href="#">Nosotros
@@ -105,23 +105,23 @@
                     </a>
                     <ul class="submenu py-2" style="background-color: white;z-index: 100; border: 1px solid;">
                         <li>
-                            <a class="nav-link" href="contenido/corporativo.html">Nuestra historia</a>
+                            <a class="nav-link" href="corporativo.html">Nuestra historia</a>
                         </li>
                         <li>
-                            <a class="nav-link" href="contenido/compromiso.html">Nuestro compromiso legal</a>
+                            <a class="nav-link" href="compromiso.html">Nuestro compromiso legal</a>
                         </li>
                         <li>
-                            <a class="nav-link" href="contenido/brochure.html">Corporativo</a>
+                            <a class="nav-link" href="brochure.html">Corporativo</a>
                         </li>
                     </ul>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link fs-5" href="contenido/sostenibilidad.html">sostenibilidad</a>
+                    <a class="nav-link fs-5" href="sostenibilidad.html">sostenibilidad</a>
                 </li>
 
                 <li class="menu-item">
-                    <a class="text-decoration-none text-white" href="/contenido/contacto.html">Contáctanos</a>
+                    <a class="text-decoration-none text-white" href="contacto.html">Contáctanos</a>
                 </li>
             </ul>
         </div>
@@ -138,17 +138,17 @@
                 <ul class="p-0 m-0">
 
                     <li class="d-flex">
-                        <a class="h-100 p-2" href="contenido/lineaoro.html"><img src="/img/goldstart.png" alt=""
+                        <a class="h-100 p-2" href="/#lineaoro.html"><img src="/img/goldstart.png" alt=""
                                 style="width: 46px;height: 46px;">&nbsp;&nbsp; Linea de Oro</a>
                     </li>
 
                     <li class="d-flex">
-                        <a class="h-100 p-2" href="contenido/lineaplata.html"><img src="/img/silverstart.png" alt=""
+                        <a class="h-100 p-2" href="/#lineaplata.html"><img src="/img/silverstart.png" alt=""
                                 style="width: 46px;height: 46   px;"> Linea de Plata</a>
                     </li>
 
                     <li>
-                        <a class="h-100 p-2 d-flex align-items-center" href="contenido/Servicios.html">Servicios
+                        <a class="h-100 p-2 d-flex align-items-center" href="Servicios.html">Servicios
                             Metalúrgicos</a>
                     </li>
 
@@ -282,68 +282,132 @@
             </p>
         </section>
 
-        <!-- productos relacionador -->
-        <section class="container p-5">
+       <!-- productos relacionador -->
+        <section class="container p-5 position-relative">
 
-            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-3">
+            <div class="carousel-wrapper position-relative">
+                <div class="carousel-track d-flex" id="carouselTrack">
 
-                <div class="col">
-                    <a href="hilo-oro.html" class="d-block h-100 text-decoration-none">
-                        <div class="card  h-100" style="background-color: #1A1A1A; border-color: #1A1A1A;">
-                            <img src="/img/hilo de oro2.png" alt="Hilo de Oro" class="card2-img-top rounded">
-                            <div class="py-2">
-                                <h6 class="card-title text-white mb-1">Hilo de Oro</h6>
-                                <p class="card-text text-white-50 mt-0">
-                                    Alambre fino de alta pureza
-                                </p>
+                    <div class="carousel-item2 me-3">
+                        <a href="oropuro.html" class="d-block text-decoration-none">
+                            <div class="card  h-100" style="background-color: #1A1A1A; border-color: #1A1A1A;">
+                                <img src="/img/oro.webp" alt="Hilo de Oro" class="card2-img-top rounded">
+                                <div class="py-2">
+                                    <h6 class="card-title text-white mb-1">Hilo de Oro</h6>
+                                    <p class="card-text text-white-50 mt-0">
+                                        En barra, lámina o granulado, pureza certificada del 99,99%
+                                    </p>
+                                </div>
                             </div>
-                        </div>
-                    </a>
-                </div>
+                        </a>
+                    </div>
 
-                <div class="col">
-                    <a href="hilo-oro.html" class="d-block h-100 text-decoration-none">
-                        <div class="card  h-100" style="background-color: #1A1A1A; border-color: #1A1A1A;">
-                            <img src="/img/lingotes plata.svg" alt="Hilo de Oro" class="card2-img-top rounded">
-                            <div class="py-2">
-                                <h6 class="card-title text-white mb-1">Plata Pura</h6>
-                                <p class="card-text text-white-50 mt-0">
-                                    Barras de plata pura para inversión y fabricación.
-                                </p>
+                    <div class="carousel-item2 me-3">
+                        <a href="hilo_oro.html" class="d-block text-decoration-none">
+                            <div class="card  h-100" style="background-color: #1A1A1A; border-color: #1A1A1A;">
+                                <img src="/img/hilo de oro2.png" alt="Hilo de Oro" class="card2-img-top rounded">
+                                <div class="py-2">
+                                    <h6 class="card-title text-white mb-1">Hilo de Oro</h6>
+                                    <p class="card-text text-white-50 mt-0">
+                                        Alambre fino de alta pureza, usado en joyería detallada, microelectrónica y
+                                        bordados de lujo.
+                                    </p>
+                                </div>
                             </div>
-                        </div>
-                    </a>
-                </div>
+                        </a>
+                    </div>
 
-                <div class="col">
-                    <a href="hilo-oro.html" class="d-block h-100 text-decoration-none">
-                        <div class="card  h-100" style="background-color: #1A1A1A; border-color: #1A1A1A;">
-                            <img src="/img/Anodos.jpg" alt="Hilo de Oro" class="card2-img-top rounded">
-                            <div class="py-2">
-                                <h6 class="card-title text-white mb-1">Ánodos de plata</h6>
-                                <p class="card-text text-white-50 mt-0">
-                                    Ánodos de plata de alta calidad para procesos industriales.
-                                </p>
+                    <div class="carousel-item2 me-3">
+                        <a href="plata_pura.html" class="d-block h-100 text-decoration-none">
+                            <div class="card  h-100" style="background-color: #1A1A1A; border-color: #1A1A1A;">
+                                <img src="/img/lingotes plata.svg" alt="Hilo de Oro" class="card2-img-top rounded">
+                                <div class="py-2">
+                                    <h6 class="card-title text-white mb-1">Plata Pura</h6>
+                                    <p class="card-text text-white-50 mt-0">
+                                        Barras de plata pura para inversión y fabricación.
+                                    </p>
+                                </div>
                             </div>
-                        </div>
-                    </a>
-                </div>
+                        </a>
+                    </div>
 
-                <div class="col">
-                    <a href="hilo-oro.html" class="d-block h-100 text-decoration-none">
-                        <div class="card  h-100" style="background-color: #1A1A1A; border-color: #1A1A1A;">
-                            <img src="/img/alambre plata.svg" alt="Hilo de Oro" class="card2-img-top rounded">
-                            <div class="py-2">
-                                <h6 class="card-title text-white mb-1">Hilo de Plata</h6>
-                                <p class="card-text text-white-50 mt-0">
-                                    Hilo de plata fino para joyería y aplicaciones electrónicas.
-                                </p>
+                    <div class="carousel-item2 me-3">
+                        <a href="anodo_plata.html" class="d-block h-100 text-decoration-none">
+                            <div class="card  h-100" style="background-color: #1A1A1A; border-color: #1A1A1A;">
+                                <img src="/img/Anodos.jpg" alt="Hilo de Oro" class="card2-img-top rounded">
+                                <div class="py-2">
+                                    <h6 class="card-title text-white mb-1">Ánodos de plata</h6>
+                                    <p class="card-text text-white-50 mt-0">
+                                        Ánodos de plata de alta calidad para procesos industriales.
+                                    </p>
+                                </div>
                             </div>
-                        </div>
-                    </a>
+                        </a>
+                    </div>
+
+                    <div class="carousel-item2 me-3">
+                        <a href="hilo_plata.html" class="d-block h-100 text-decoration-none">
+                            <div class="card  h-100" style="background-color: #1A1A1A; border-color: #1A1A1A;">
+                                <img src="/img/alambre plata.svg" alt="Hilo de Oro" class="card2-img-top rounded">
+                                <div class="py-2">
+                                    <h6 class="card-title text-white mb-1">Hilo de Plata</h6>
+                                    <p class="card-text text-white-50 mt-0">
+                                        Hilo de plata fino para joyería y aplicaciones electrónicas.
+                                    </p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="carousel-item2 me-3">
+                        <a href="nitrato_plata.html" class="d-block h-100 text-decoration-none">
+                            <div class="card h-100" style="background-color: #1A1A1A; border-color: #1A1A1A;">
+                                <img src="../img/nitrato.jpg" alt="Hilo de Oro" class="card2-img-top rounded">
+                                <div class="py-2">
+                                    <h6 class="card-title text-white mb-1">Nitrato de Plata</h6>
+                                    <p class="card-text text-white-50 mt-0">
+                                    Utilizado en diversos procesos industriales, galvanoplastia y extracción de metales preciosos.
+                                    </p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
+                    <!-- <div class="carousel-item2 me-3">
+                        <a href="cianuro_plata.html" class="d-block h-100 text-decoration-none">
+                            <div class="card h-100" style="background-color: #1A1A1A; border-color: #1A1A1A;">
+                                <img src="../img/silver cyanide.png" alt="imagen cianuro de plata" class="card2-img-top rounded">
+                                <div class="py-2">
+                                    <h6 class="card-title text-white mb-1">Cianuro de Plata</h6>
+                                    <p class="card-text text-white-50 mt-0">
+                                    Utilizado en diversos procesos industriales, incluyendo la galvanoplastia y la extracción de metales preciosos.
+                                    </p>
+                                </div>
+                            </div>
+                        </a>
+                    </div> -->
+
+                    <div class="carousel-item2 me-3">
+                        <a href="cianuro_plata_potasio.html" class="d-block h-100 text-decoration-none">
+                            <div class="card h-100" style="background-color: #1A1A1A; border-color: #1A1A1A;">
+                                <img src="../img/nitrato.jpg" alt="imagen cianuro de plata" class="card2-img-top rounded">
+                                <div class="py-2">
+                                    <h6 class="card-title text-white mb-1">Cianuro de Plata Potasio</h6>
+                                    <p class="card-text text-white-50 mt-0">
+                                    Utilizado en diversos procesos industriales, incluyendo la galvanoplastia y la extracción de metales preciosos.
+                                    </p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
                 </div>
 
             </div>
+
+            <!-- Botones manuales -->
+            <button id="btnLeft" class="carousel-btn left">&larr;</button>
+            <button id="btnRight" class="carousel-btn right">&rarr;</button>
 
         </section>
 
@@ -389,6 +453,7 @@
             gtag_report_conversion(this.href);
         });
     </script>
+    <script src="../js/poductos_rel_carrusel.js"></script>
 </body>
 
 </html>
